--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Login/ForgottenCredentials.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Login/ForgottenCredentials.cshtml
@@ -5,70 +5,77 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="hgroup">
-    <h1 class="heading-large">Can't access your account?</h1>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <h1 class="heading-large">Can't access your account?</h1>
+    </div>
 </div>
 
-@Html.Partial("ValidationSummary", ViewData.ModelState)
+<div class="grid-row">
+    <div class="column-two-thirds">
 
-@using (Html.BeginRouteForm(RouteNames.ForgottenPassword, FormMethod.Post, new { @id = "forgotten-password-form" }))
-{
-    @Html.AntiForgeryToken()
+        @Html.Partial("ValidationSummary", ViewData.ModelState)
 
-    <section>
-        <div>
-            <h2 class="heading-medium">If you have an account with the old service</h2>
-            <p class="sfa-medium-bottom-margin">
-                <img src="~/Content/_assets/img/logo-apprenticeships.png" width="133" height="50" alt="Logo from the old Apprenticeships vacancies service" title="Logo from the old Apprenticeships vacancies service" align="left" />
-                You won't be able to sign in using existing "Apprenticeship vacancies" details.
-            </p>
-            <p>You must <a href="@Url.RouteUrl(RouteNames.Register)">create an account</a> to access this new service.</p>
-        </div>
-    </section>
-    <section>
-        <div>
-            
-            <h2 class="heading-medium">Forgotten your password?</h2>
-            <p>
-                To reset your password we need to send you a 6-character code. If you can’t see it in your inbox within a few minutes, please check your spam folder.
-            </p>
-        </div>
+        @using (Html.BeginRouteForm(RouteNames.ForgottenPassword, FormMethod.Post, new { @id = "forgotten-password-form" }))
+        {
+            @Html.AntiForgeryToken()
 
-        @Html.FormTextFor(m => m.ForgottenPasswordViewModel.EmailAddress, controlHtmlAttributes: new { @class = "linked-input-master", type = "email", spellcheck = "false"}, hintHtmlAttributes: new { @class = "text" }, labelText: "Enter email")
+            <section>
+                <div>
+                    <h2 class="heading-medium">If you have an account with the old service</h2>
+                    <p class="sfa-medium-bottom-margin">
+                        <img src="~/Content/_assets/img/logo-apprenticeships.png" width="133" height="50" alt="Logo from the old Apprenticeships vacancies service" title="Logo from the old Apprenticeships vacancies service" align="left" />
+                        You won't be able to sign in using existing "Apprenticeship vacancies" details.
+                    </p>
+                    <p>You must <a href="@Url.RouteUrl(RouteNames.Register)">create an account</a> to access this new service.</p>
+                </div>
+            </section>
+            <section>
+                <div>
 
-        <div class="form-group">
-            <button class="button" id="forgottenpassword-button">Send code</button>
-        </div>
-    </section>
-}
+                    <h2 class="heading-medium">Forgotten your password?</h2>
+                    <p>
+                        To reset your password we need to send you a 6-character code. If you can’t see it in your inbox within a few minutes, please check your spam folder.
+                    </p>
+                </div>
 
-<div>
-    <h2 class="heading-medium">If your account is locked</h2>
-    <p>
-        If your account is locked and you’ve been sent a code to unlock it, you
-        can <a href="@Url.RouteUrl(RouteNames.Unlock)">enter it</a> now.
-    </p>
-</div>
-
-@using (Html.BeginRouteForm(RouteNames.ForgottenEmail, FormMethod.Post, new { @id = "forgotten-email-form" }))
-{
-    @Html.AntiForgeryToken()
-
-    <div>
-        <h2 class="heading-medium">If you've forgotten your email address</h2>
-        <details>
-            <summary><span class="summary">Retrieve your email address</span></summary>
-            <div class="panel panel-border-narrow">
-                <p>
-                    To retrieve the email address you used to create your account, you'll need to verify your mobile number. Enter your number and we'll send your email address via text message.
-                </p>
-
-                @Html.FormTextFor(m => m.ForgottenEmailViewModel.PhoneNumber, controlHtmlAttributes: new { type = "tel" })
+                @Html.FormTextFor(m => m.ForgottenPasswordViewModel.EmailAddress, controlHtmlAttributes: new { @class = "linked-input-master", type = "email", spellcheck = "false" }, hintHtmlAttributes: new { @class = "text" }, labelText: "Enter email")
 
                 <div class="form-group">
-                    <button class="button" id="forgottenemail-button">Send email address</button>
+                    <button class="button" id="forgottenpassword-button">Send code</button>
                 </div>
+            </section>
+        }
+
+        <div>
+            <h2 class="heading-medium">If your account is locked</h2>
+            <p>
+                If your account is locked and you’ve been sent a code to unlock it, you
+                can <a href="@Url.RouteUrl(RouteNames.Unlock)">enter it</a> now.
+            </p>
+        </div>
+
+        @using (Html.BeginRouteForm(RouteNames.ForgottenEmail, FormMethod.Post, new { @id = "forgotten-email-form" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div>
+                <h2 class="heading-medium">If you've forgotten your email address</h2>
+                <details>
+                    <summary><span class="summary">Retrieve your email address</span></summary>
+                    <div class="panel panel-border-narrow">
+                        <p>
+                            To retrieve the email address you used to create your account, you'll need to verify your mobile number. Enter your number and we'll send your email address via text message.
+                        </p>
+
+                        @Html.FormTextFor(m => m.ForgottenEmailViewModel.PhoneNumber, controlHtmlAttributes: new { type = "tel" })
+
+                        <div class="form-group">
+                            <button class="button" id="forgottenemail-button">Send email address</button>
+                        </div>
+                    </div>
+                </details>
             </div>
-        </details>
+        }
     </div>
-}
+</div>
