--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -15,7 +15,7 @@
     {
         @Html.HiddenFor(m => m.VacancyReferenceNumber)
 
-        <section>
+        <section class="sfa-xlarge-top-margin">
             <div class="form-group">
                 <button id="btnApprove" type="submit" class="button" name="VacancyQAAction" value="Approve">Approve and continue to next vacancy</button>
                 <button id="btnReject" type="submit" class="button sfa-button-secondary" name="VacancyQAAction" value="Reject">Refer and continue to next vacancy</button>
