--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_AboutTraineeships.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_AboutTraineeships.cshtml
@@ -3,26 +3,29 @@
 
 @if (Model == VacancyType.Traineeship)
 {
-    <section class="sfa-section-bordered grid-row" id="about-traineeships">
-        <h2 class="heading-large">About traineeships</h2>
+    <section class="grid-row" id="about-traineeships">
+        <div class="column-full">
+            <h2 class="heading-large">About traineeships</h2>
+        </div>
         <div class="column-two-thirds">
-                <p>
-                    A traineeship is a course with work experience that gets you ready for work or an apprenticeship. It can last up to 6 months.<br />
-                    You can apply if you’re:
-                    <ul>
-                        <li>eligible to work in England</li>
-                        <li>unemployed and have little or no work experience</li>
-                        <li>aged 16 to 24 and qualified below Level 3</li>
-                    </ul>
-                </p>
-                <p>
-                    You’ll get:
-                    <ul>
-                        <li>a work experience placement</li>
-                        <li>help with English and maths (if you need it)</li>
-                    </ul>
-                </p>
-                <p>You won’t be paid, but you may be given expenses for things like travel and meals.</p>
+            <p>
+                A traineeship is a course with work experience that gets you ready for work or an apprenticeship. It can last up to 6 months.<br/>
+                You can apply if you’re:
+                <ul>
+                    <li>eligible to work in England</li>
+                    <li>unemployed and have little or no work experience</li>
+                    <li>aged 16 to 24 and qualified below Level 3</li>
+                </ul>
+            </p>
+            <p>
+                You’ll get:
+                <ul>
+                    <li>a work experience placement</li>
+                    <li>help with English and maths (if you need it)</li>
+                </ul>
+            </p>
+            <p>You won’t be paid, but you may be given expenses for things like travel and meals.</p>
         </div>
     </section>
+    <hr class="sfa-no-bottom-margin" />
 }
