--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -68,8 +68,8 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">My applications</h1>
     </div>
-    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
-        <ul class="list">
+    <div class="column-one-third">
+        <ul class="list sfa-align-right-tablet sfa-xlarge-top-margin">
             @if (Model.AllApprenticeshipApplications.Any() || Model.TraineeshipApplications.Any())
             {
                 <li>@Html.RouteLink("Find an apprenticeship", CandidateRouteNames.ApprenticeshipSearch, null, new { id = "find-apprenticeship-link", @class = "link-unimp" })</li>
