--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/UpdateEmailAddress.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/UpdateEmailAddress.cshtml
@@ -8,8 +8,8 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Change your email address</h1>
     </div>
-    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
-        <ul class="list">
+    <div class="column-one-third">
+        <ul class="list sfa-align-right-tablet sfa-xlarge-top-margin">
             <li>
             @Html.RouteLink("Find an apprenticeship", CandidateRouteNames.ApprenticeshipSearch, null, new {id = "find-apprenticeship-link"})
             </li>
