--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
@@ -10,8 +10,8 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Your application</h1>
     </div>
-    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
-        <ul class="list">
+    <div class="column-one-third">
+        <ul class="list sfa-align-right-tablet sfa-xlarge-top-margin">
             <li>
                 <a class="print-trigger hide-nojs" href=""><i class="fa fa-print"></i>Print this page</a>
             </li>
