--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
@@ -24,7 +24,6 @@
 
     <fieldset class="sfa-xlarge-bottom-margin sfa-section-bordered">
         <legend class="heading-large">Contact details</legend>
-        <div class="form-group">
 
             @Html.EditorFor(a => a.Address, new { AnalyticsDSCUri = "/register/findaddress" })
             @Html.FormTextFor(m => m.EmailAddress, controlHtmlAttributes: new { @class = "linked-input-master", type = "email", spellcheck = "false" }, hintHtmlAttributes: new { @class = "text" })
@@ -32,7 +31,6 @@
 
             @Html.FormTextFor(m => m.PhoneNumber, controlHtmlAttributes: new { @class = "form-control-1-3", type = "tel" }, hintHtmlAttributes: new { @class = "text" })
 
-        </div>
     </fieldset>
 
     <fieldset class="sfa-xlarge-bottom-margin sfa-section-bordered">
@@ -52,13 +50,14 @@
         
         @Html.FormPasswordFor(m => m.ConfirmPassword, controlHtmlAttributes: new { autocomplete = "off" })
     </fieldset>
-    
+
+ 
     <div class="form-group">
-        @Html.FormUnvalidatedCheckBoxFor(m => m.AcceptUpdates, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
-    </div>
-
-    @Html.FormCheckBoxFor(m => m.HasAcceptedTermsAndConditions, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
-
+        <fieldset>
+            @Html.FormUnvalidatedCheckBoxFor(m => m.AcceptUpdates, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
+            @Html.FormCheckBoxFor(m => m.HasAcceptedTermsAndConditions, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
+        </fieldset>
+     </div>
     <div class="form-group">
         <button id="create-account-btn" class="button">Create account</button>
     </div>
