--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Apprenticeship.cshtml
@@ -12,8 +12,8 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Your application<br />(@Model.ApplicantDetails.Name)</h1>
     </div>
-    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
-        <ul class="list">
+    <div class="column-one-third">
+        <ul class="list sfa-align-right-tablet sfa-xlarge-top-margin">
             <li class="hide-nojs">
                 <a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>
             </li>
