--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
@@ -10,53 +10,56 @@
     var editableItemClass = Model.IsEditable ? "editable-item" : "";
 }
 
-<section>
-    <div class="grid-row">
-        <div class="column-two-thirds">
-            <h1 id="heading" class="heading-xlarge">
-                @if (Model.VacancyType == VacancyType.Traineeship)
-                {
-                    <span>Opportunity preview</span>
-                }
-                else
-                {
-                    <span>Vacancy preview</span>
-                }
-            </h1>
-        </div>
-        <div class="column-one-third" style="float: right">            
+<section class="grid-row">
+    <div class="column-two-thirds">
+        <h1 id="heading" class="heading-xlarge">
+            @if (Model.VacancyType == VacancyType.Traineeship)
+            {
+                <span>Opportunity preview</span>
+            }
+            else
+            {
+                <span>Vacancy preview</span>
+            }
+        </h1>
+    </div>
+    <div class="column-one-third"> 
+        <ul class="list sfa-align-right-tablet sfa-xlarge-top-margin">
             @if (Model.Mode == VacancyViewModel.BulkUploadMode)
             {
                 @Html.Partial("DisplayTemplates/_BulkUploadVacancyLinks", new VacancyLinksViewModel(Model.VacancyReferenceNumber, Model.Status, Model.ApplicationCount, Model.VacancyType, Model.ApplicationPendingDecisionCount))
             }
             else
             {
+                
                 @Html.Partial(ContactDetailsAndVacancyHistoryViewModel.PartialView, Model.ContactDetailsAndVacancyHistory ?? ContactDetailsAndVacancyHistoryViewModel.EmptyContactDetailsAndVacancyHistory)
+                
                 @Html.Partial(VacancyLinksViewModel.PartialView, new VacancyLinksViewModel(Model.VacancyReferenceNumber, Model.Status, Model.ApplicationCount, Model.VacancyType, Model.ApplicationPendingDecisionCount))
             }
-        </div>
-        <div class="column-two-thirds" style="clear: left">
-            <div class="hgroup text @editableItemClass">
-                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
-                    @HtmlExtensions.EscapeHtmlEncoding(Html, Model.VacancyType.GetTitle(Model.NewVacancyViewModel.Title))
-                    @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.NewVacancyViewModel.Title, Model.NewVacancyViewModel.TitleComment, Model.BasicDetailsLink))
-                    <p class="heading-secondary " id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName</p>
-                </h1>
-                @if (Model.IsManageReviewerView && Model.NewVacancyViewModel.VacancyOwnerRelationship.IsAnonymousEmployer != null
-                && Model.NewVacancyViewModel.VacancyOwnerRelationship.IsAnonymousEmployer.Value)
-                {
-                    <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName (@Model.NewVacancyViewModel.VacancyOwnerRelationship.OriginalFullName - Set as Anonymous)</p>
-                }                
-                @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.Title, Model.BasicDetailsLink, Model.NewVacancyViewModel.TitleComment))
-            </div>
+        </ul>
+    </div>
+</section>
+<section class="grid-row">
+    <div class="column-two-thirds">
+        <div class="@editableItemClass">
+            <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
+                @HtmlExtensions.EscapeHtmlEncoding(Html, Model.VacancyType.GetTitle(Model.NewVacancyViewModel.Title))
+                @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.NewVacancyViewModel.Title, Model.NewVacancyViewModel.TitleComment, Model.BasicDetailsLink))
+                <span class="heading-secondary " id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName</span>
+            </h1>
+            @if (Model.IsManageReviewerView && Model.NewVacancyViewModel.VacancyOwnerRelationship.IsAnonymousEmployer != null
+            && Model.NewVacancyViewModel.VacancyOwnerRelationship.IsAnonymousEmployer.Value)
+            {
+                <p class="secondary-text" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName (@Model.NewVacancyViewModel.VacancyOwnerRelationship.OriginalFullName - Set as Anonymous)</p>
+            }                
+            @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.Title, Model.BasicDetailsLink, Model.NewVacancyViewModel.TitleComment))
         </div>
     </div>
 </section>
-<section>
-    <div class="grid-row">
+<section class="grid-row">
         <div class="column-two-thirds">
                 <div class="@editableItemClass">
-                    <h3 class="bold-small">
+                    <h3 class="heading-small sfa-no-top-margin">
                         @if (Model.VacancyType == VacancyType.Traineeship)
                         {
                             <span>Summary</span>
@@ -76,7 +79,7 @@
         </div>
         <div class="column-one-third">
             <div class="@editableItemClass">
-                <h3 class="bold-small">
+                <h3 class="heading-small sfa-no-top-margin">
                     Closing date
                     @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModel(Model, m => m.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDate, ViewData.ModelState, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDateComment))
                 </h3>
@@ -84,5 +87,4 @@
                 @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDate, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDateComment))
             </div>
         </div>
-    </div>
 </section>
