--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
@@ -13,9 +13,9 @@
     Change vacancy dates
 </h1>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.ManageDates, 
-                            new RouteValueDictionary () { { "vacancyReferenceNumber", Model.VacancyReferenceNumber }}, 
-                            FormMethod.Post, new { id = "manage-vacancy-dates-form" }))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ManageDates,
+                            new RouteValueDictionary { { "vacancyReferenceNumber", Model.VacancyReferenceNumber }},
+                            FormMethod.Post, new Dictionary<string, object> { { "id", "manage-vacancy-dates-form" }}))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
